# router-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  encode_credentials.py  main.py  pyproject.toml  script.sh  script_exceptions.py  Инструкция по прошивке ASUS.md
.github/workflows/: deploy.yml
